tests/invalid/invalid_datetime_bad_month.csl
config InvalidDatetime {
  d: datetime = 2025-13-01;
}
